git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@678 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -901,6 +901,7 @@ fr-FR:
         details: 'Informations complémentaires'
         complements: 'Champs personnalisés'
         client: 'Informations client'
+        meeting: Lieu(x) de rencontre
       _entities_search:
         search: Rechercher une fiche
       entities_update:
