--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -202,6 +202,8 @@ fr-FR:
       bank_account_statement:
         bank_account_id: Compte bancaire utilisé
         number: Numéro du relevé de compte
+        credit: Crédit
+        debit: Débit
         started_on: Du
         stopped_on: Au
       company:
@@ -282,7 +284,7 @@ fr-FR:
         code: Code
         comment: Commentaire
         country: Pays
-        created_on: Créée le
+        created_on: Crée le
         dead_on: Date de décès
         deliveries_conditions: Conditions de Livraison
         discount_rate: 'Taux d''escompte'
@@ -480,7 +482,7 @@ fr-FR:
         amount_with_taxes: Montant TTC
         client_id: Client
         confirmed_on: Confirmée le
-        created_on: Créée le
+        created_on: Crée le
         nature: Nature
         nature_id: Nature
         number: Numéro
