--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -418,7 +418,7 @@ fr-FR:
         name: Nom
         nature: Nature
         number: Numéro
-        price: Prix indicatif
+        price: Prix de revient
         quantity_min: Quantité minimum
         quantity_max: Quantité maximum
         service_coeff: Coefficient (de quantité) de service
@@ -561,6 +561,7 @@ fr-FR:
       stock_move:
         name: Nom
         planned_on: Prévu le
+        input: Entrée
         moved_on: Fait le
         quantity: Quantité
         unit_id: Unité
@@ -900,7 +901,7 @@ fr-FR:
       entities_contacts_create:
         title: 'Ajout d''un contact à la fiche de : {{value}}'
       entities_contacts_update:
-        title: 'Modification de "{{contact}}" de "{{entity}}"'
+        title: 'Modification de l''adresse de "{{entity}}"'
       entities_contact_delete:
         title: Caractéristiques du contact à supprimer
       _entities_contacts_form:
@@ -1198,15 +1199,22 @@ fr-FR:
         R: Règlements
         F: Clôturée
       sale: Vente
+    purchase_order_line: 
+      stock_location_can_not_receive_product : 'Le lieu de stockage {{location}} ne peut recevoir le produit {{product}}, il contient déjà le produit {{contained_product}}'
     sale_order_line:
       error_no_found_price: 'Aucun prix n'' a pu être trouvé pour ce produit et cette liste de tarif'
+      stock_location_can_not_transfer_product : 'Le produit {{product}} ne peut être sorti du réservoir {{location}}, celui-ci contient {{contained_product}} '
     stock_transfer:
       stock_location_can_not_receive_product: 'Le lieu de stockage {{location}} ne peut recevoir le produit {{product}}, il contient déjà le produit {{contained_product}}'
       stock_location_can_not_transfer_product: 'Vous ne pouvez pas tranférer le produit {{product}} depuis le lieu de stockage {{location}}, celui-ci contient le produit {{contained_product}}'
+      stock_location_can_not_waste_product: 'Vous ne pouvez pas enregistrer de perte pour  le produit {{product}} depuis le lieu de stockage {{location}}, celui-ci contient le produit {{contained_product}}'
       natures:
           transfer: Transfert 
           waste: Perte
-    
+    stock_move:
+      natures:
+        virtual: zz
+        real: hjhj    
   
   # Genral words and expression through the all app
   general:
