git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@702 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.accountancy.yml
+++ b/config/locales/fr-FR.accountancy.yml
@@ -110,7 +110,7 @@ fr-FR:
       _entries:
         title: 'Saisie des écritures'
         record_number: 'N°Pièce'
-        record_created: 'Créée le'
+        record_created: 'Crée le'
         record_printed: 'Datée du'
         label: 'Libellé'
         account_number: 'N°Compte'
