--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -1151,6 +1151,7 @@ fr-FR:
         purchase: Achats
         sale: Ventes
         bank: Banque
+        report: Des à nouveaux
         various: Opérations diverses
     journal_period:
       error_out_of_range: ' est en dehors de l''intervalle de temps de l''exercice (du {{started_on}} au {{stopped_on}})'
