git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@719 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -925,6 +925,7 @@ fr-FR:
       entities:
         title: 'Fiches des relations'
         entities_create: Créer une nouvelle fiche
+        entities_export: Tout exporter au format CSV
         nb_entities: 
           zero: 'Aucune fiche enregistrée'
           one: '1 fiche enregistrée'
