git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@720 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -1238,6 +1238,8 @@ fr-FR:
     example: 'Exemple&nbsp;: {{value}}'
     filter: Filtrer
     finish: Terminer
+    format_date:
+      iso: "(AAAA-MM-JJ)"
     hint: 'Astuce&nbsp;: {{value}}'
     info: 'Information&nbsp;: {{value}}'
     next: Suivant
