git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@730 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -645,6 +645,7 @@ fr-FR:
       first_contact: Adresse principale
       second_contact: Adresse secondaire
       title: Relations
+      you_must_select_a_file_to_import: Vous devez sélectionner un fichier à importer
     resources:
       title: Ressources
       professions:
