git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@733 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -927,6 +927,7 @@ fr-FR:
         title: 'Fiches des relations'
         entities_create: Créer une nouvelle fiche
         entities_export: Tout exporter au format CSV
+        entities_import: Importer un fichier CSV
         nb_entities: 
           zero: 'Aucune fiche enregistrée'
           one: '1 fiche enregistrée'
@@ -957,6 +958,8 @@ fr-FR:
           other: ' {{count}} ventes '
         state: État
         title: 'Fiche : {{value}}'
+      entities_import:
+        title:  Importer des fiches clients et fournisseurs au format CSV
       _entities_form:
         title: 'Renseignez les différentes caractéristiques de la fiche'
         details: 'Informations complémentaires'
