--- a/config/locales/fr-FR/help/relations-entities_import.txt
+++ b/config/locales/fr-FR/help/relations-entities_import.txt
@@ -1,5 +1,7 @@
 h1. Comment importer un fichier CSV ?
  
+* Afin d'importer un fichier csv qui corresponde au format Ekylibre, il est conseillé de *préalablement exporter un fichier csv clients/fournisseurs* afin d'avoir *un fichier défini selon le format Ekylibre* et qu'il sera ensuite possible d'importer.
+
 * Sélectionnez le fichier à télécharger. Ceci va modifier votre base de données de fiches clients et fournisseurs. En effet, si vous avez *modifié ou ajouté des fiches* dans votre fichier csv qui ne l'étaient pas dans la base de données du logiciel, celles-ci le seront grâce à l'import.
 
 * Vous pouvez donc *générer automatiquement des fiches clients fournisseurs ainsi que des types de fiche*. En effet si le type de fiche du fichier csv n'existe pas, celui-ci sera également créé. 
@@ -11,3 +13,4 @@ h1. Comment importer un fichier CSV ?
 * Les colonnes 5 à 11 servent à former l'adresse principale de la fiche.
 
 <<relations-index|Revenir à l'aide de gestion des relations >>
+ 
