git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@744 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR/help/accountancy-financialyears.txt
+++ b/config/locales/fr-FR/help/accountancy-financialyears.txt
@@ -5,7 +5,7 @@ L'exercice comptable est une période de temps délimitée au cours de laquelle 
 
 h2. Gestion d'un exercice comptable
 Pour utiliser un exercice comptable (nécéssaire pour toutes les opérations d'enregistrements d'écritures et d'élaboration des documents comptables), commencer par le <<accountancy-financialyears_create|créer>>. L'exercice comptable créé apparaîtra dans le tableau des exercices comptables. Par la suite, il vous sera possible de le modifier <<accountancy-financialyears_update|{{buttons/update.png|modifier}}>>, le supprimer <<accountancy-financialyears_delete|{{buttons/delete.png|supprimer}}>>, sous réserve qu'il n'existe aucun journal (ou période d'enregistrement) relatif à cet exercice comptable.
-Dans le cas où vous souhaitez <<accountancy-journals_close|clôturer>> l'exercice, l'opération ne sera possible que si les conditions suivantes sont réunies:
-les **journaux** sont clôturés à des dates **antérieures** à la date choisie pour la clôture de l'exercice.
+Dans le cas où vous souhaitez <<accountancy-journals_close|clore>> l'exercice, l'opération ne sera possible que si les conditions suivantes sont réunies:
+les **journaux** sont clos à des dates **antérieures** à la date choisie pour la clôture de l'exercice.
 les **journaux** sont **équilibrés**.
 Après l'opération de clôture, les **dates de clôture** des journaux sont **ramenées** à la date de clôture de l'exercice. 
