--- a/config/locales/fr-FR/help/accountancy-entries_consult.txt
+++ b/config/locales/fr-FR/help/accountancy-entries_consult.txt
@@ -2,7 +2,7 @@ h1. Consulter des écritures
 
 
 h2. Choisir son journal et son exercice
-Sélectionner l'exercice comptable et le journal dont vous souhaitez consulter les écritures pour l'exercice choisi. Dans le cas où vous sélectionner le journal depuis <<accountancy-journals|le listing des journaux>>, celui-ci est automatiquement pris en compte dans le formulaire. De plus, l'exercice comptable considéré par défaut est toujours le dernier exercice non encore clôturé. 
+Sélectionner l'exercice comptable et|ou le journal dont vous souhaitez consulter les écritures. Dans le cas où vous sélectionner le journal depuis <<accountancy-journals|le listing des journaux>> ou l'exercice depuis <<accountancy-financialyears|le listing des exercices>>, celui-ci est automatiquement pris en compte dans le formulaire.
 
 h2. La liste des écritures
 Un listing des écritures correspondant à votre demande apparaît. L'indication **Pas d'enregistrement** vous indique simplement qu'aucune écriture n'a été trouvé. 
