--- a/config/locales/fr-FR/help/accountancy-financialyears_close.txt
+++ b/config/locales/fr-FR/help/accountancy-financialyears_close.txt
@@ -1,2 +1,2 @@
-h1. Comment clôturer un exercice comptable ?
-Remplisser le formulaire de clôture de l'exercice en sélectionnant le numéro de l'exercice comptable à clôturer ainsi que la date de clôture qui, par défaut, est à la date du jour puis confirmer l'opération à l'aide du bouton **Clôturer l'exercice**
+h1. Comment clore un exercice comptable ?
+Remplisser le formulaire de clôture de l'exercice en sélectionnant le numéro de l'exercice comptable à clore ainsi que la date de clôture qui, par défaut, est à la date du jour puis confirmer l'opération à l'aide du bouton **Clore l'exercice**
