--- a/config/locales/fr-FR/help/accountancy-journals_close.txt
+++ b/config/locales/fr-FR/help/accountancy-journals_close.txt
@@ -1,4 +1,4 @@
-h1. Comment clôturer un journal comptable ?
-Sélectionner le journal à clôturer ainsi que la date de clôture puis confirmer l'opération à l'aide du bouton **Clôturer le journal**.
+h1. Comment clore un journal comptable ?
+Sélectionner le journal à clore ainsi que la date de clôture puis confirmer l'opération à l'aide du bouton **Clore le journal**.
 
   
