git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@753 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.accountancy.yml
+++ b/config/locales/fr-FR.accountancy.yml
@@ -15,7 +15,10 @@ fr-FR:
       messages:
         need_financialyear_to_record_entries: 'Vous devez avoir un exercice ouvert pour pouvoir saisir des écritures.'
         need_bank_account_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
-        need_journal_to_record_entries: 'Vous devez créer un journal pour pouvoir saisir des écritures à l''intérieur.'
+        need_journal_to_record_entries: 'Vous devez avoir au moins un journal pour pouvoir saisir des écritures à l''intérieur.'
+        need_journal_to_consult_entries: 'Vous devez avoir au moins un journal pour pouvoir consulter des écritures à l''intérieur.'
+        need_financialyear_to_record_entries: 'Vous devez avoir au moins un exercice pour pouvoir saisir des écritures à l''intérieur.'
+        need_financialyear_to_consult_entries: 'Vous devez avoir au moins un exercice pour pouvoir consulter des écritures à l''intérieur.'
         need_report_journal_to_report: 'Vous devez créer un journal des à nouveaux pour cette opération.'
         need_financialyear_to_report: 'Vous devez avoir un exercice cloturé pour cette opération.'
         need_financialyear_to_consult_entries: 'Vous devez avoir un exercice ouvert pour pouvoir consulter des écritures.'
